...
        android:text="@string/register_string"
        android:textAllCaps="false"
        android:textColor="#00B87C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_zc_btn"
        app:strokeColor="#00B87C"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
...
